# rs-sandbox

./: .env.example  .gitignore  Dockerfile  README.md  debian10-install-docker.sh  docker-compose.yml  gunicorn_config.py  pyproject.toml  pytest.ini
backend/: settings.py  test_settings.py  urls.py
nginx/: default.conf
rsapp/: views.py
