[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
psycopg2 = "^2.9.1"
djangorestframework = "^3.12.4"
pytz = "^2021.1"
sqlparse = "^0.4.1"
django-environ = "^0.4.5"
gunicorn = "^20.1.0"
django-model-utils = "4.1.1"
retrying = "^1.3.3"
drf-friendly-errors = "0.14"
jsonschema = "^3.2.0"
whitenoise = "^5.2.0"
serpy = "^0.3.1"
drf-yasg = {extras = ["validation"], version = "^1.17.1"}
factory_boy = "^3.2.0"
django-storages = {extras = ["google"], version = "^1.11"}
django-fsm = "^2.7.1"
django-cors-headers = "^3.5.0"
freezegun = "^1.0.0"
djangorestframework-camel-case = "^1.2.0"
pyhumps = "^1.6.1"
django-simple-history = "^3.0.0"
django-rest-framework-social-oauth2 = "^1.1.0"
django-oauth-toolkit = "^1.5.0"
exponent-server-sdk = "^2.0.0"
django-better-admin-arrayfield = "^1.4.2"
phonenumbers = "^8.12.28"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.4.0"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
django-extensions = "^3.1.3"
drf-yasg = {extras = ["validation"], version = "^1.17.1"}
ipython = "^7.25.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
